Styling: fixed title alignment

--- a/src/Components/Pages/Contact/Contact.css
+++ b/src/Components/Pages/Contact/Contact.css
@@ -14,7 +14,8 @@
 .contactTitle {
   font-family: main-font;
   color: aliceblue;
-  font-size: 2rem;
+  margin: 0;
+  padding: 30px;
   text-align: center;
 }
 
